<resources>
    <string name="app_name">InmobiliariaMicalizzi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inmobiliaria Micalizzi</string>
    <string name="nav_header_subtitle">micalizziinmobiliaria@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_logout">Logout</string>
    <string name="contraseña">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="login">LOGIN</string>
    <string name="loginTitle">Inmobiliaria La Punta</string>
    <string name="logo_inmobiliaria">Logo Inmobiliaria</string>
    <string name="editar">Editar</string>
    <string name="no">No</string>
    <string name="yes">Si</string>
</resources>