<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.perfil.PerfilFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_inmuebleFragment"
            app:destination="@id/inmuebleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/inquilinos_fragment" >
        <action
            android:id="@+id/action_nav_inquilinos_to_inquilinoFragment"
            app:destination="@id/inquilinoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/contratos_fragment" >
        <action
            android:id="@+id/action_nav_contratos_to_contratoFragment"
            app:destination="@id/contratoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/logout_fragment" />
    <fragment
        android:id="@+id/inmuebleFragment"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.inmuebles.InmuebleFragment"
        android:label="Inmueble"
        tools:layout="@layout/inmueble_fragment">
        <action
            android:id="@+id/action_inmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/contratoFragment"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.contratos.ContratoFragment"
        android:label="Contrato"
        tools:layout="@layout/contrato_fragment">
        <action
            android:id="@+id/action_contratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
        <action
            android:id="@+id/action_contratoFragment_to_pagosFragment"
            app:destination="@id/pagosFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.contratos.pagos.PagosFragment"
        android:label="Pagos Contrato"
        tools:layout="@layout/pagos_fragment">
        <action
            android:id="@+id/action_pagosFragment_to_contratoFragment"
            app:destination="@id/contratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/inquilinoFragment"
        android:name="com.andresoft.inmobiliariamicalizzi.ui.inquilinos.InquilinoFragment"
        android:label="inquilino_fragment"
        tools:layout="@layout/inquilino_fragment" >
        <action
            android:id="@+id/action_inquilinoFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
</navigation>